--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@rails/webpacker": "3.5",
     "bootstrap": "3",
     "jquery": "^3.4.0",
+    "popper.js": "^1.15.0",
+    "sweetalert": "^2.1.2",
     "typed.js": "^2.0.9"
   },
   "devDependencies": {
